--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+<meta charset="utf-8">
+<title>Image Hover Effect</title>
+<meta name="keywords" content="footer, address, phone, icons" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/style.css">
+</head> 
+<body>
+
+  <div class="wrapper">
+      <div class="container">
+        <div class="hero-section">
+          <div class="gallery">
+            <div class="image-section">
+              <img src="images/blog1.jpg" alt="">
+            </div>
+            <div class="caption">
+              <h2>Hover One</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+          </div>
+          
+          <div class="gallery">
+            <div class="image-section">
+              <img src="images/blog1.jpg" alt="">
+            </div>
+            <div class="caption">
+              <h2>Hover Two</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+          </div>
+
+          <div class="gallery">
+            <div class="image-section">
+              <img src="images/blog1.jpg" alt="">
+            </div>
+            <div class="caption">
+              <h2>Hover Three</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+          </div>
+
+          <div class="gallery">
+            <div class="image-section">
+              <img src="images/blog1.jpg" alt="">
+            </div>
+            <div class="caption">
+              <h2>Hover Four</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+          </div>
+
+          <div class="gallery">
+            <div class="image-section">
+              <img src="images/blog1.jpg" alt="">
+            </div>
+            <div class="caption">
+              <h2>Hover Five</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+          </div>
+
+          <div class="gallery">
+            <div class="image-section">
+              <img src="images/blog1.jpg" alt="">
+            </div>
+            <div class="caption">
+              <h2>Hover Six</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+        <script type="text/javascript">
+    </script>
+
+    <script src="js/script.js"></script> 
+
+  </body>
+</html>
 
